Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,8 +160,8 @@
    "outputs": [],
    "source": [
     "# initial variables of our regression line\n",
-    "m = 0\n",
-    "\n",
+    "m_current = 0\n",
+    "b = 0\n",
     "\n",
     "#amount to update our variables for our next step\n",
     "\n",
