Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,13 +155,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# initial variables of our regression line\n",
     "m_current = 0\n",
-    "b = 0\n",
+    "b_current = 0\n",
     "\n",
     "#amount to update our variables for our next step\n",
     "\n",
