--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
     "# initial variables of our regression line\n",
     "m_current = 0\n",
     "b_current = 0\n",
-    "\n",
+    "update_to\n",
     "#amount to update our variables for our next step\n",
     "\n",
     "\n",
