--- a/index.ipynb
+++ b/index.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "\n",
     "# Define the error_at function\n",
-    "\n",
+    "def error_at()\n",
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
