--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
     "\n",
     "# Define the error_at function\n",
     "def error_at(point, b, m):\n",
-    "    return point[0] - (b)\n",
+    "    return point[0] - (b+m*point[1])\n",
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "\n",
