Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,8 @@
     "m_current = 0\n",
     "b_current = 0\n",
     "#amount to update our variables for our next step\n",
-    "\n",
+    "update_to_b = 0\n",
+    "update_to_m = 0\n",
     "\n",
     "# Define the error_at function\n",
     "def error_at(point, b, m):\n",
