--- a/index.ipynb
+++ b/index.ipynb
@@ -171,7 +171,8 @@
     "    return point[0] - (b+m*point[1])\n",
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
-    "for i in range(data)\n",
+    "for datum in data:\n",
+    "    \n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n"
