--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "for datum in data:\n",
-    "    update_to_b += error_at(datum, )\n",
+    "    update_to_b += error_at(datum, m)\n",
     "    update_to_m += \n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
