--- a/index.ipynb
+++ b/index.ipynb
@@ -172,8 +172,8 @@
     "\n",
     "# iterate through data to change update_to_b and update_to_m\n",
     "for datum in data:\n",
-    "    update_to_b += error_at(datum, b_current, m_current)\n",
-    "    update_to_m += \n",
+    "    update_to_b += 2 * error_at(datum, b_current, m_current)\n",
+    "    update_to_m += 2 * error_at(datum, b_current, m_current)\n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "\n"
