--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,9 @@
     "    update_to_b += 2 * error_at(datum, b_current, m_current)\n",
     "    update_to_m += 2 * datum[1] * error_at(datum, b_current, m_current)\n",
     "\n",
-    "# Create new_b and new_m by subtracting the updates from the current estimates\n"
+    "# Create new_b and new_m by subtracting the updates from the current estimates\n",
+    "m_current = 0\n",
+    "b_current = 0"
    ]
   },
   {
