--- a/index.ipynb
+++ b/index.ipynb
@@ -176,8 +176,8 @@
     "    update_to_m += 2 * datum[1] * error_at(datum, b_current, m_current)\n",
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
-    "m_current = 0\n",
-    "b_current = 0"
+    "m_current -= update_to_b\n",
+    "b_current -= update_to_m"
    ]
   },
   {
