Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "m_current -= update_to_b\n",
-    "b_current -= update_to_m"
+    "b_current -= update_to_m\n"
    ]
   },
   {
