--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,9 @@
     "\n",
     "# Create new_b and new_m by subtracting the updates from the current estimates\n",
     "m_current -= update_to_b\n",
-    "b_current -= update_to_m\n"
+    "b_current -= update_to_m\n",
+    "\n",
+    "print(f'm_')"
    ]
   },
   {
