--- a/index.ipynb
+++ b/index.ipynb
@@ -179,7 +179,7 @@
     "m_current -= update_to_b\n",
     "b_current -= update_to_m\n",
     "\n",
-    "print(f'm_')"
+    "print(f'm_current: {m_current}')"
    ]
   },
   {
