Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,6 +165,7 @@
     "#amount to update our variables for our next step\n",
     "update_to_b = 0\n",
     "update_to_m = 0\n",
+    "newline = \n",
     "\n",
     "# Define the error_at function\n",
     "def error_at(point, b, m):\n",
