Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -180,7 +180,7 @@
     "m_current -= update_to_b\n",
     "b_current -= update_to_m\n",
     "\n",
-    "print(f'm_current: {m_current}')"
+    "print(f'm_current: {m_current}{newline}')"
    ]
   },
   {
