Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m_current: -1815.0185037502683\n",
+      "b_current: -1243.7171547903115\n"
+     ]
+    }
+   ],
    "source": [
     "# initial variables of our regression line\n",
     "m_current = 0\n",
@@ -180,7 +189,7 @@
     "m_current -= update_to_b\n",
     "b_current -= update_to_m\n",
     "\n",
-    "print(f'm_current: {m_current}{newline}')"
+    "print(f'm_current: {m_current}{newline}b_current: {b_current}')"
    ]
   },
   {
