Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gradient_descent(data, )"
+   ]
   },
   {
    "cell_type": "markdown",
