--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(data, m_guess, b_guess(:)"
+    "def gradient_descent(data, m_guess, b_guess):\n",
+    "    "
    ]
   },
   {
