Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(data, m_guess, b_guess):\n",
-    "    error ="
+    "    error = 0\n",
+    "    "
    ]
   },
   {
