--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(data, m_guess, b_guess, steps, learn):\n",
+    "def gradient_descent(data, m_guess, b_guess, steps, learnrate):\n",
     "    error = 0\n",
     "    "
    ]
