Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,8 @@
    "source": [
     "def gradient_descent(data, m_guess, b_guess, steps, learnrate):\n",
     "    error = 0\n",
-    "    "
+    "    for datum in data:\n",
+    "        "
    ]
   },
   {
