--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     "def gradient_descent(data, m_guess, b_guess, steps, learnrate):\n",
     "    error = 0\n",
     "    for datum in data:\n",
-    "        error += error_at(datum, b_gur, m_current)"
+    "        error += error_at(datum, b_current, m_current)"
    ]
   },
   {
