Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(data, m_guess, b_guess, steps, learnrate):\n",
+    "def gradient_descent(data, m_current, b_current, steps, learnrate):\n",
     "    error = 0\n",
     "    for datum in data:\n",
     "        error += error_at(datum, b_current, m_current)"
