Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,8 @@
     "def gradient_descent(data, b_current, m_current, steps, learnrate):\n",
     "    error = 0\n",
     "    for datum in data:\n",
-    "        error += error_at(datum, b_current, m_current)"
+    "        error += error_at(datum, b_current, m_current)\n",
+    "    b"
    ]
   },
   {
