--- a/index.ipynb
+++ b/index.ipynb
@@ -202,7 +202,7 @@
     "    error = 0\n",
     "    for datum in data:\n",
     "        error += error_at(datum, b_current, m_current)\n",
-    "    b"
+    "    b_current += "
    ]
   },
   {
