Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
     "    for datum in data:\n",
     "        error += error_at(datum, b_current, m_current)\n",
     "    b_current += 2*error*learnrate\n",
-    "    m_current += 2*error*learnrate"
+    "    m_current += 2*error*learnrate*datum[1]"
    ]
   },
   {
