--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate):\n",
-    "        \n",
+    "    for step in steps:\n",
     "        error = 0\n",
     "        for datum in data:\n",
     "            error += error_at(datum, b_current, m_current)\n",
