--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,8 @@
     "        for datum in data:\n",
     "            error += error_at(datum, b_current, m_current)\n",
     "        b_current += 2*error*learnrate\n",
-    "        m_current += 2*error*learnrate*datum[1]"
+    "        m_current += 2*error*learnrate*datum[1]\n",
+    "    print(f'm_current: {m_current}{newline}b_current: {b_current}')"
    ]
   },
   {
