Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,11 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate):\n",
+    "    print(f'm_current: {m_current}{newline}b_current: {b_current}')\n",
     "    for step in steps:\n",
     "        error = 0\n",
     "        for datum in data:\n",
