Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,6 +210,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradient_descent(data, 0, 0)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
