Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradient_descent(data, 0, 0)"
+    "gradient_descent(data, 0, 0, 10, )"
    ]
   },
   {
