Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate):\n",
     "    print(f'm_current: {m_current}{newline}b_current: {b_current}')\n",
-    "    for step in steps:\n",
+    "    for i in range(se:\n",
     "        error = 0\n",
     "        for datum in data:\n",
     "            error += error_at(datum, b_current, m_current)\n",
