Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate):\n",
-    "    print(f'm_current: {m_current}{newline}b_current: {b_current}')\n",
+    "    print(f'step: {m_current: {m_current}{newline}b_current: {b_current}')\n",
     "    for i in range(steps):\n",
     "        error = 0\n",
     "        for datum in data:\n",
