Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,32 +206,51 @@
     "            error += error_at(datum, b_current, m_current)\n",
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
-    "        print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}')"
+    "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "step: initial\n",
       "m_current: 0\n",
-      "b_current: 0\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-2e0994097c02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-7-34b74ef5a65a>\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(data, b_current, m_current, steps, learnrate)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb_current\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm_current\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearnrate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'm_current: {m_current}{newline}b_current: {b_current}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mstep\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0merror\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mdatum\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+      "b_current: 0\n",
+      "step: 0\n",
+      "m_current: 115.17044262618485\n",
+      "b_current: 181.50185037502683\n",
+      "step: 1\n",
+      "m_current: -699.0017414489342\n",
+      "b_current: -1101.585672464046\n",
+      "step: 2\n",
+      "m_current: 5056.609943340576\n",
+      "b_current: 7968.920153584694\n",
+      "step: 3\n",
+      "m_current: -35631.424497085725\n",
+      "b_current: -56153.03137029675\n",
+      "step: 4\n",
+      "m_current: 252003.71096564672\n",
+      "b_current: 397143.0412062964\n",
+      "step: 5\n",
+      "m_current: -1781369.7928294323\n",
+      "b_current: -2807334.123479443\n",
+      "step: 6\n",
+      "m_current: 12593118.21707358\n",
+      "b_current: 19846014.361593228\n",
+      "step: 7\n",
+      "m_current: -89024172.0452416\n",
+      "b_current: -140296864.24633428\n",
+      "step: 8\n",
+      "m_current: 629336973.9755195\n",
+      "b_current: 991798092.2998278\n",
+      "step: 9\n",
+      "m_current: -4448959591.30532\n",
+      "b_current: -7011298903.196617\n"
      ]
     }
    ],
