--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,10 @@
     "            error += error_at(datum, b_current, m_current)\n",
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
-    "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}b_current: {b_current}')"
+    "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {b_current}')\n",
+    "        \n",
+    "        \n",
+    "        "
    ]
   },
   {
