--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
     "            error += error_at(datum, b_current, m_current)\n",
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
-    "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {b_current}')\n",
+    "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
     "        \n",
     "        \n",
     "        "
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -227,33 +227,53 @@
       "step: 0\n",
       "m_current: 115.17044262618485\n",
       "b_current: 181.50185037502683\n",
+      "error: 907.5092518751342\n",
+      "\n",
       "step: 1\n",
       "m_current: -699.0017414489342\n",
       "b_current: -1101.585672464046\n",
+      "error: -6415.4376141953635\n",
+      "\n",
       "step: 2\n",
       "m_current: 5056.609943340576\n",
       "b_current: 7968.920153584694\n",
+      "error: 45352.5291302437\n",
+      "\n",
       "step: 3\n",
       "m_current: -35631.424497085725\n",
       "b_current: -56153.03137029675\n",
+      "error: -320609.7576194072\n",
+      "\n",
       "step: 4\n",
       "m_current: 252003.71096564672\n",
       "b_current: 397143.0412062964\n",
+      "error: 2266480.3628829657\n",
+      "\n",
       "step: 5\n",
       "m_current: -1781369.7928294323\n",
       "b_current: -2807334.123479443\n",
+      "error: -16022385.823428698\n",
+      "\n",
       "step: 6\n",
       "m_current: 12593118.21707358\n",
       "b_current: 19846014.361593228\n",
+      "error: 113266742.42536335\n",
+      "\n",
       "step: 7\n",
       "m_current: -89024172.0452416\n",
       "b_current: -140296864.24633428\n",
+      "error: -800714393.0396374\n",
+      "\n",
       "step: 8\n",
       "m_current: 629336973.9755195\n",
       "b_current: 991798092.2998278\n",
+      "error: 5660474782.73081\n",
+      "\n",
       "step: 9\n",
       "m_current: -4448959591.30532\n",
-      "b_current: -7011298903.196617\n"
+      "b_current: -7011298903.196617\n",
+      "error: -40015484977.48222\n",
+      "\n"
      ]
     }
    ],
