--- a/index.ipynb
+++ b/index.ipynb
@@ -194,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate):\n",
-    "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
+    "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
     "    for i in range(steps):\n",
     "        error = 0\n",
     "        for datum in data:\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -224,6 +224,7 @@
       "step: initial\n",
       "m_current: 0\n",
       "b_current: 0\n",
+      "\n",
       "step: 0\n",
       "m_current: 115.17044262618485\n",
       "b_current: 181.50185037502683\n",
