--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
     "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
-    "        \n",
+    "        if error <\n",
     "        \n",
     "        "
    ]
