Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(data, b_current, m_current, steps, learnrate):\n",
+    "def gradient_descent(data, b_current, m_current, steps, learnrate, error_cu):\n",
     "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
     "    for i in range(steps):\n",
     "        error = 0\n",
