--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gradient_descent(data, b_current, m_current, steps, learnrate, error_cu):\n",
+    "def gradient_descent(data, b_current, m_current, steps, learnrate, error_cutoff = 0.1):\n",
     "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
     "    for i in range(steps):\n",
     "        error = 0\n",
@@ -207,7 +207,7 @@
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
     "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
-    "        if error <\n",
+    "        if error < error\n",
     "        \n",
     "        "
    ]
