--- a/index.ipynb
+++ b/index.ipynb
@@ -208,7 +208,7 @@
     "        m_current += 2*error*learnrate*datum[1]\n",
     "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
     "        if error < error_cutoff:\n",
-    "            iteratio+= 1\n",
+    "            iter_count += 1\n",
     "            return gradient_descent\n",
     "        \n",
     "        "
