Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,7 @@
     "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
     "        if error < error_cutoff:\n",
     "            iter_count += 1\n",
-    "            return gradient_descent(data, b_current, m_curr)\n",
+    "            return gradient_descent(data, b_current, m_current, steps, learnrate, error)\n",
     "        \n",
     "        "
    ]
