--- a/index.ipynb
+++ b/index.ipynb
@@ -207,6 +207,7 @@
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
     "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
+    "        if error < 0.00001\n",
     "        if error < error_cutoff:\n",
     "            return gradient_descent(data, b_current, m_current, steps, learnrate, error_cutoff = error_cutoff/10, iter_count = iter_count+1)\n",
     "        \n",
