Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate, error_cutoff = 0.1, iter_count = 0):\n",
     "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
-    "    \n",
+    "    global b_list = []\n",
     "    for i in range(steps):\n",
     "        error = 0\n",
     "        for datum in data:\n",
