Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     "def gradient_descent(data, b_current, m_current, steps, learnrate, error_cutoff = 0.1, iter_count = 0):\n",
     "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
     "    for i in range(steps):\n",
-    "        \n",
+    "        count += 1\n",
     "        error = 0\n",
     "        for datum in data:\n",
     "            error += error_at(datum, b_current, m_current)\n",
