Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,8 @@
    "outputs": [],
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate, error_cutoff = 0.1, iter_count = 0):\n",
-    "    if cou\n",
+    "    if count > 1000:\n",
+    "        return \n",
     "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
     "    for i in range(steps):\n",
     "        count += 1\n",
