Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,7 @@
     "        m_current += 2*error*learnrate*datum[1]\n",
     "        \n",
     "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
-    "    return gradient_descent(data, b_current, m_current, steps, learnrate/10, error_cutoff = 0.1, total_step_count = 0)    \n",
+    "    return gradient_descent(data, b_current, m_current, steps, learnrate/10, error_cutoff = 0.1, total_step_count = count)    \n",
     "    \n",
     "        \n",
     "        "
