Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,67 +219,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "step: initial\n",
-      "m_current: 0\n",
-      "b_current: 0\n",
-      "\n",
-      "step: 0\n",
-      "m_current: 11.517044262618485\n",
-      "b_current: 18.150185037502684\n",
-      "error: 907.5092518751342\n",
-      "\n",
-      "step: 1\n",
-      "m_current: 13.740662258223933\n",
-      "b_current: 21.654476342864378\n",
-      "error: 175.2145652680846\n",
-      "\n",
-      "step: 2\n",
-      "m_current: 14.169980482382275\n",
-      "b_current: 22.331056638186986\n",
-      "error: 33.8290147661304\n",
-      "\n",
-      "step: 3\n",
-      "m_current: 14.252869781694807\n",
-      "b_current: 22.461685303480433\n",
-      "error: 6.53143326467228\n",
-      "\n",
-      "step: 4\n",
-      "m_current: 14.268873378919201\n",
-      "b_current: 22.486906032364075\n",
-      "error: 1.2610364441821602\n",
-      "\n",
-      "step: 5\n",
-      "m_current: 14.27196322436662\n",
-      "b_current: 22.49177544723556\n",
-      "error: 0.24347074357430998\n",
-      "\n",
-      "step: 6\n",
-      "m_current: 14.272559786799121\n",
-      "b_current: 22.492715594576268\n",
-      "error: 0.047007367035380554\n",
-      "\n",
-      "step: 7\n",
-      "m_current: 14.272674966260984\n",
-      "b_current: 22.492897110640428\n",
-      "error: 0.009075803208069999\n",
-      "\n",
-      "step: 8\n",
-      "m_current: 14.272697204182302\n",
-      "b_current: 22.492932156297766\n",
-      "error: 0.0017522828668710133\n",
-      "\n",
-      "step: 9\n",
-      "m_current: 14.272701497700751\n",
-      "b_current: 22.492938922630564\n",
-      "error: 0.0003383166398656101\n",
-      "\n"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'count' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-48f998e173ac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.01\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-18-c650f5c46808>\u001b[0m in \u001b[0;36mgradient_descent\u001b[0;34m(data, b_current, m_current, steps, learnrate, error_cutoff, total_step_count)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mgradient_descent\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb_current\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm_current\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearnrate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merror_cutoff\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_step_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mcount\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mb_current\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm_current\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'count' referenced before assignment"
      ]
     }
    ],
