--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "count = "
+    "count = 0"
    ]
   },
   {
@@ -213,7 +213,7 @@
     "        return b_current, m_current\n",
     "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
     "    for i in range(steps):\n",
-    "        count += 1\n",
+    "        total_step_count += 1\n",
     "        error = 0\n",
     "        for datum in data:\n",
     "            error += error_at(datum, b_current, m_current)\n",
