--- a/index.ipynb
+++ b/index.ipynb
@@ -208,8 +208,7 @@
    "outputs": [],
    "source": [
     "def gradient_descent(data, b_current, m_current, steps, learnrate, error_cutoff = 0.1, total_step_count = 0):\n",
-    "    global count\n",
-    "    if count > 1000:\n",
+    "    if total_step_count > 1000:\n",
     "        return b_current, m_current\n",
     "    print(f'step: initial{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}')\n",
     "    for i in range(steps):\n",
