--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
     "        \n",
-    "        print(f'step: {i}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
+    "        print(f'step: {total_step}{newline}m_current: {m_current}{newline}b_current: {b_current}{newline}error: {error}{newline}')\n",
     "    return gradient_descent(data, b_current, m_current, steps, learnrate/10, error_cutoff = 0.1, total_step_count = total_step_count)    \n",
     "    \n",
     "        \n",
