Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -6142,7 +6142,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "m_current: 14.27270252500162\n",
+    "b_current: 22.492940541596372\n",
+    "error: 1.7763568394002505e-14\n"
+   ]
   },
   {
    "cell_type": "markdown",
