Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "plt.plot(x, y, '.b')\n",
     "plt.xlabel(\"x\", fontsize=14)\n",
-    "plt.ylabel(\"y\", fontsize=14);"
+    "plt.ylabel(\"y\", fontsize=14);\n"
    ]
   },
   {
