Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -144,6 +144,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_current: 14.27270252500162\n",
+    "b_current: 22.492940541596372\n",
+    "error: 1.7763568394002505e-14"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
