Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -140,7 +140,7 @@
     "plt.xlabel(\"x\", fontsize=14)\n",
     "plt.ylabel(\"y\", fontsize=14);\n",
     "\n",
-    "plt.plot(x, )"
+    "plt.plot(x, 14.27270252500162*x+22.492940541596372)"
    ]
   },
   {
