Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
     "        error = 0\n",
     "        for datum in data:\n",
     "            error += error_at(datum, b_current, m_current)\n",
-    "            errot_x += error_at(datum, b_current, m_current)*datum[1]\n",
+    "            error_x += error_at(datum, b_current, m_current)*datum[1]\n",
     "        b_current += 2*error*learnrate\n",
     "        m_current += 2*error*learnrate*datum[1]\n",
     "        \n",
